pamc/src/tests/sample_code/should_fail/multi_file/bind/use_priv/src/foo/bar.ph
pub type Foo {
    .C: Foo,
}
